<resources>
    <string name="app_name">Natasha\'s Hair Studio</string>
    <string name="title_shop">Shop</string>
    <string name="title_book">Book</string>
    <string name="title_review">Review</string>
    <string name="title_social">Social</string>

    <string name="logo">Logo</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="length">Length</string>
    <string name="rating">Rating</string>
    <string name="service">Service</string>
    <string name="details">Details</string>
    <string name="profile_image">Profile image</string>
    <string name="comments">Comments</string>
    <string name="uid">uid</string>
    <string name="id">id</string>
    <string name="throne_image">Throne image</string>
    <string name="show_your_crown_image">Show your crown image</string>
    <string name="instagram_page_link">Instagram page link</string>
    <string name="facebook_page_link">Facebook page link</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="view_wish_list">View Wish List</string>
    <string name="picture_outline">Picture outline</string>
    <string name="login_picture">Login picture</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="signed_out">Signed Out</string>

    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string-array name="ratings_services">
        <item>Consultation</item>
        <item>Basic Service</item>
        <item>Braids</item>
        <item>Chemical Service</item>
        <item>For The Fellas</item>
        <item>Sew-Ins</item>
        <item>Wig Install</item>
    </string-array>
    <string name="reminder_7_days">Appointment Reminder (7 days)</string>

    <!--Actions-->
    <string name="action_social">social</string>
    <string name="action_shop">shop</string>
    <string name="action_book">book</string>
    <string name="action_review">review</string>

    <!--Wireless Alert Dialog-->
    <string name="title_offline">Offline</string>
    <string name="message_network_warning">You must be online to use this app.</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_exit">Exit</string>
    <string name="toast_try_again">Please connect to a network and try again later.</string>


    <string name="url_string">https://app.acuityscheduling.com/schedule.php?owner=11362345</string>
    <string name="key_selected_fragment">selected_fragment</string>

    <!--LoginActivity communication-->
    <string name="toast_signed_out">Signed Out</string>
    <string name="toast_account_deleted">Account Deleted.</string>
    <string name="toast_canceled">Canceled.</string>
    <string name="title_delete_account">Delete Account</string>
    <string name="message_confirm_delete">Are you sure you want to delete your account?</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="toast_delete_warning">You must be signed in to delete your account</string>
    <string name="toast_signed_in">Signed In</string>
    <string name="toast_reminder_set">Appointment reminder set for 7 days.</string>
    <string name="toast_reminder_removed">Appointment reminder removed.</string>
</resources>
