<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_book"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_placeholder"
        android:icon="@color/fui_transparent"
        android:title=""/>

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review"
        android:title="@string/title_review" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social"
        android:title="@string/title_social" />

</menu>
