<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/darkGrey">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/logo2"
            android:contentDescription="@string/logo" />
    </FrameLayout>

    <TextView
        android:id="@+id/hSpace7"
        style="@style/horizontal_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGrey">

        <TextView
            android:id="@+id/hSpace1"
            style="@style/vertical_space" />

        <LinearLayout
            android:id="@+id/ShopButton"
            style="@style/WidgetButton">

            <TextView
                android:id="@+id/textView4"
                android:drawableTop="@drawable/ic_shop"
                android:text="@string/title_shop"
                style="@style/widget_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/hSpace2"
            style="@style/vertical_space" />

        <LinearLayout
            android:id="@+id/BookButton"
            style="@style/WidgetButton">

            <TextView
                android:id="@+id/textView5"
                android:drawableTop="@drawable/ic_book"
                android:text="@string/title_book"
                style="@style/widget_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/hSpace3"
            style="@style/vertical_space" />

        <LinearLayout
            android:id="@+id/ReviewButton"
            style="@style/WidgetButton">

            <TextView
                android:id="@+id/textView10"
                android:drawableTop="@drawable/ic_review"
                android:text="@string/title_review"
                style="@style/widget_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/hSpace4"
            style="@style/vertical_space" />

        <LinearLayout
            android:id="@+id/SocialButton"
            style="@style/WidgetButton">

            <TextView
                android:id="@+id/textView11"
                android:drawableTop="@drawable/ic_social"
                android:text="@string/title_social"
                style="@style/widget_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/hSpace5"
            style="@style/vertical_space" />

    </LinearLayout>

    <TextView
        android:id="@+id/hSpace6"
        style="@style/horizontal_space" />


</LinearLayout>