<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/windowBackground"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_sign_in_google"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="96dp"
        android:text="@string/sign_in_with_google"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_picture" />

    <Button
        android:id="@+id/btn_view_wish_list"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/view_wish_list"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_google"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />

    <ImageView
        android:id="@+id/iv_picture_outline"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/picture_outline"
        app:layout_constraintBottom_toBottomOf="@+id/iv_login_picture"
        app:layout_constraintEnd_toEndOf="@+id/iv_login_picture"
        app:layout_constraintStart_toStartOf="@+id/iv_login_picture"
        app:layout_constraintTop_toTopOf="@+id/iv_login_picture"
        app:srcCompat="@android:color/black" />

    <ImageView
        android:id="@+id/iv_login_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/login_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:srcCompat="@color/browser_actions_title_color" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/iv_login_picture"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/iv_login_picture"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title"
        tools:text="Aaron Crutchfield" />

    <TextView
        android:id="@+id/tv_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_login" />

    <TextView
        android:id="@+id/tv_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/delete_account"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_signed_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/signed_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/iv_login_picture"
        app:layout_constraintEnd_toEndOf="@+id/iv_login_picture"
        app:layout_constraintStart_toStartOf="@+id/iv_login_picture" />

    <Switch
        android:id="@+id/sw_appointment_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Appointment Reminder (7 days)"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintEnd_toEndOf="@+id/btn_view_wish_list"
        app:layout_constraintStart_toStartOf="@+id/btn_view_wish_list"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_wish_list" />

</androidx.constraintlayout.widget.ConstraintLayout>